<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_Safety" Id="{77c0daf9-9a10-098e-3657-0dce897f074e}">
    <Declaration><![CDATA[VAR_GLOBAL
	//State
	SafetySate: INT;
	ErrorAck_RESETED : BOOL;
	
	//TWinSafe Group
	FBError						AT %I* :BOOL; //FBerror
	ComError					AT %I* :BOOL; //ComError
	SafeError					AT %I* :BOOL; //SafeError
	RunStop						AT %Q* :BOOL; //RunStop
	ErrorAck					AT %Q* :BOOL; //ErrorAck
	
	eStopButton					AT %I* :BOOL;
	eStopHMI					:BOOL;
	

	
	//Other
	SAFETY_Permission			AT %I* :BOOL; // FALSE = cannot operate
	RestartFBs_TSG				AT %Q* :BOOL; // Restart FB in TwinSafe Gr //RestartFBs
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>